# adslicer-3000-ebpf-carnage

./: .dir-locals.el  .editorconfig  .gitignore  .golangci.yml  .goreleaser.yaml  .markdownlint.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.goreleaser  LICENSE  Makefile  README.md  SECURITY.md  dist-workspace.toml  go.mod  go.sum
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  release-go.yml  release.yml  security.yml
.vim/: coc-settings.json
adslicer3k/: Cargo.toml
adslicer3k-common/: Cargo.toml
adslicer3k-ebpf/: Cargo.toml
adslicer3k-ebpf/src/: main.rs
adslicer3k/src/: main.rs
bpf/: adblocker.bpf.c  maps.h  parsers.h  vmlinux.h
cmd/adblocker/: main.go
configs/: adblocker.yaml  allowlist.txt
docs/: ARCHITECTURE.md  INSTALL.md  PRODUCTION.md  RELEASING.md  TUI.md
docs/superpowers/plans/: 2026-04-27-tui-service-control.md
docs/superpowers/specs/: 2026-04-27-tui-service-control-design.md  2026-04-28-tui-architecture.md  (+1 more)
internal/cli/: cli.go  config.go  daemon.go  list.go  mutate.go  stats.go  update.go
internal/hash/: fnv.go  fnv_test.go
internal/lists/: lists.go  lists_test.go
internal/loader/: adblocker_bpfel.go  gen.go  loader.go
internal/version/: version.go
scripts/: postinstall.sh  preremove.sh
systemd/: adblocker.service
tui/: Cargo.toml  README.md  rustfmt.toml
tui/src/: app.rs  backend.rs  input.rs  main.rs  ui.rs
xtask/src/: build_ebpf.rs  run.rs
