[package]
name        = "adblocker-tui"
version     = "0.1.0"
edition     = "2021"
description = "Ratatui-based TUI for the eBPF adblocker (manage blocklist, allowlist, stats, events)"
license     = "MIT"
repository  = "https://github.com/sandeshgrangdan/adslicer-3000-ebpf-carnage"
homepage    = "https://github.com/sandeshgrangdan/adslicer-3000-ebpf-carnage"
readme      = "../docs/TUI.md"

[[bin]]
name = "adblocker-tui"
path = "src/main.rs"

[dependencies]
ratatui    = "0.28"
crossterm  = "0.28"
clap       = { version = "4.5", features = ["derive"] }
anyhow     = "1"
thiserror  = "1"
serde      = { version = "1", features = ["derive"] }

[profile.release]
opt-level = 3
lto       = "thin"
strip     = true
codegen-units = 1

# cargo-dist builds with this profile. Mirrors release with thin LTO so
# behavior matches between local builds and shipped artifacts.
[profile.dist]
inherits = "release"
lto      = "thin"
